--- a/views/editor.jade
+++ b/views/editor.jade
@@ -1,19 +1,5 @@
-script(language='javascript')
- // 
-   function allcheck(targetForm,flag){
-   for(n=0;n<=targetForm.length-1;n++){
-   if(targetForm.elements[n].type == "checkbox"){
-   targetForm.elements[n].checked = flag;}}} 
 script(src='http://code.jquery.com/jquery.js')
-script(language='javascript')
- //
-   $(document).ready(function() {
-   var max = 0;
-   $("label").each(function(){
-   if( $(this).width() > max ){
-   max = $(this).width();}});
-   $("label").width(max).css({"float":"left", "clear":"both" });
-   });
+script(src='scripts/editor.js')
 
 h1=title
 div!=partial('editorPartial', editor_res)
